--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.2",
     "install": "^0.13.0",
     "npm": "^11.2.0",
     "react": "^19.0.0",
